<resources>
    <string name="app_name">Prueba 1</string>

    <!--FRASES EDAD CANINA-->
    <string name="que_edad_tienes">¿Que edad tienes?</string>
    <string name="introduce_tu_edad">Introduce tu edad</string>
    <string name="calcular">Calcular</string>
    <string name="mensajePersonalizado">Si fueras un perro tendrias %d años</string>

    <!--FRASES SUPERHEROES DETAIL-->
    <string name="alter_ego">Alter Ego</string>
    <string name="bio">Bio</string>
    <string name="power">Power</string>

    <!--FRASES SUPERHEROES MAIN-->
    <string name="Nombre_superheroe">Nombre superheroe</string>
    <string name="Alter_ego2">Alter ego</string>
    <string name="Bio2">Bio</string>
    <string name="Power2">Power</string>
    <string name="Guardar">Guardar</string>

    <!--FRASES LOGIN-->
    <string name="Bienvenidos_a_la_app_Iesch">Bienvenidos a la app Iesch</string>
    <string name="Logearse">Logearse</string>
    <string name="Nombre">Nombre</string>
    <string name="Contraseña">Contraseña</string>


    <!--FRASES HOME-->
    <string name="Buenos_dias">Buenos dias</string>
    <string name="mensajePersonalizado2">Hola %s</string>
    <string name="Edad_Canina">Edad Canina</string>
    <string name="SuperHerores">SuperHerores</string>
    <string name="bandeja_entrada">bandeja entrada</string>
    <string name="Opciones">Opciones</string>
    <string name="Favoritos">Favoritos</string>
    <string name="Cerrar_sesion">Cerrar sesion</string>
    <string name="Desde">Desde</string>
    <string name="Descuento">Descuento</string>





</resources>
